--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="components/allRecipes/allRecipes.css">
     <link rel="stylesheet" href="components/landingPage/landingPage.css">
     <link rel="stylesheet" href="state/state.css">
     <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
+    <script src="components/allRecipes/allRecipes.js"></script>
     <script src="components/landingPage/landingPage.js"></script>
     <script src="state/state.js"></script>
     <script src="index.js"></script>
