Media icon, lite css landingPage

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <script src="components/landingPage/landingPage.js"></script>
     <script src="state/state.js"></script>
     <script src="index.js"></script>
+
+    <img src="" alt="">
 </body>
 
 </html>
