--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="components/logIn/logIn.css">
     <link rel="stylesheet" href="components/recipesList/recipesList.css">
     <link rel="stylesheet" href="components/allRecipes/allRecipes.css">
     <link rel="stylesheet" href="components/landingPage/landingPage.css">
@@ -13,6 +14,7 @@
 </head>
 
 <body>
+    <script src="components/logIn/logIn.js"></script>
     <script src="components/recipesList/recipesList.js"></script>
     <script src="components/allRecipes/allRecipes.js"></script>
     <script src="components/landingPage/landingPage.js"></script>
