created navigation component

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="components/allRecipes/allRecipes.css">
     <link rel="stylesheet" href="components/landingPage/landingPage.css">
     <link rel="stylesheet" href="state/state.css">
+    <link rel="stylesheet" href="components/navigation/navigation.css">
     <link rel="stylesheet" href="index.css">
 </head>
 
@@ -21,6 +22,7 @@
     <script src="components/allRecipes/allRecipes.js"></script>
     <script src="state/state.js"></script>
     <script src="components/landingPage/landingPage.js"></script>
+    <script src="components/navigation/navigation.js"></script>
     <script src="index.js"></script>
 
 
