added a input field

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="components/sort/sort.css">
     <link rel="stylesheet" href="components/logIn/logIn.css">
     <link rel="stylesheet" href="components/recipePage/recipePage.css">
     <link rel="stylesheet" href="components/recipesList/recipesList.css">
@@ -16,6 +17,7 @@
 </head>
 
 <body>
+    <script src="components/sort/sort.js"></script>
     <script src="components/logIn/logIn.js"></script>
     <script src="components/recipePage/recipePage.js"></script>
     <script src="components/recipesList/recipesList.js"></script>
