--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="components/profilePage/profilePage.css">
     <link rel="stylesheet" href="components/filter/filter.css">
     <link rel="stylesheet" href="components/sort/sort.css">
     <link rel="stylesheet" href="components/logIn/logIn.css">
@@ -18,6 +19,7 @@
 </head>
 
 <body>
+    <script src="components/profilePage/profilePage.js"></script>
     <script src="components/filter/filter.js"></script>
     <script src="components/sort/sort.js"></script>
     <script src="components/logIn/logIn.js"></script>
